syntax = "proto3";
option go_package = "./;gateway_rpc";
package gateway_rpc;

service Gateway {
  rpc UpdateGatewayList(UpdateGatewayListReq)returns(GeneralResp){}
  //todo:gateway需要被注册以获取信息，至少包括funcManager和dispatcher，可以不包括scheduler和node
}
message UpdateGatewayListReq {
  enum OperationType {
    APPEND = 0;
    REDUCE = 1;
    OVERRIDE = 2;
  }

  OperationType type = 1; // 操作类型 追加/减少/覆盖
  map<string, string> gatewayList = 2;; // 网关列表
}

message GeneralResp{
  int64 statusCode = 1;
  string description = 2;
  string errorInformation = 3;
}
